GNOME Bugzilla – Bug 738243
vc1parse: fix framesize when input is frame-layer
Last modified: 2014-10-25 12:14:27 UTC
frame-layer header is represented as a sequence of 32 bit unsigned integer serialized in little-endian byte order, so framesize is on the first 3 bytes.
Created attachment 288143 [details] [review] vc1parse: fix framesize when input is frame-layer
Pushed, thanks for the patch: commit 6df477ff0d01a08cf9e09a717b8d5b6d18bc3c6e Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Thu Oct 9 18:18:02 2014 +0200 vc1parse: fix framesize when input is frame-layer frame-layer header is represented as a sequence of 32 bit unsigned integer serialized in little-endian byte order, so framesize is on the first 3 bytes. SMPTE 421M Annex L. https://bugzilla.gnome.org/show_bug.cgi?id=738243